logo, search, gaps fix

--- a/src/components/FeaturedSlider.css
+++ b/src/components/FeaturedSlider.css
@@ -71,6 +71,7 @@
   }
 
   .FeaturedSlider-text {
+    height: 2em;
     text-align: center;
     width: 100%
   }
