--- a/src/components/Navigation/NavigationAppBar.css
+++ b/src/components/Navigation/NavigationAppBar.css
@@ -6,9 +6,17 @@
   margin-left: 1em;
 }
 
+/*appbar left icon*/
+.NavigationAppBar ._30BcY {
+  height: 100%;
+  width: auto;
+}
 .NavigationAppBar-logo {
   /*box-shadow: 0px 0px 14px -1px rgba(0, 0, 0, 0.55);*/
   box-shadow: var(--shadow-4p);
+  height: 3rem;
+  vertical-align: middle;
+  border-radius: 50%;
 }
 
 .NavigationAppBar-title--hidden {
